Refactor exception handling and service implementations
- Updated exception imports to use new domain-specific exceptions for better clarity and organization.
- Introduced new error code and message constants for consistent error handling across the application.
- Refactored the IdempotencyService and related services to utilize the new exception structure.
- Removed the StripePaymentGateway implementation and replaced it with a mock version for testing purposes.
- Added a new MockStripePaymentGateway for simulating payment gateway interactions in tests.
- Enhanced error handling in the StripePaymentGateway to provide more informative responses.
- Updated application configuration to improve security and maintainability.
- Added unit tests for the new StripePaymentGateway implementation to ensure correctness.